# SingletonDB

./: CMakeLists.txt
include/: db.h
src/: db.cpp  main.cpp
